# PCMindTrace

./: AppConfig.h  CMakeLists.txt  Main.qml  components.qrc  icons.qrc  icons2.qrc  images.qrc  main.cpp  popups.qrc  qml.qrc
android/: AndroidManifest.xml
android/assets/: mindtracedb.db
models/: EntryModel.cpp  EntryModel.h  entryClass.cpp  entryClass.h
qml/CustomComponents/: CustActivityButton.qml  CustButtonSettings.qml  CustButtonTurnBack.qml  CustCheckboxHome.qml  CustChecker.qml  CustDateIcon.qml  CustEmotionButton.qml  CustEntryBlock.qml  CustEntryButton.qml  CustFlickRefresher.qml  CustFolderBlock.qml  CustFolderButton.qml  CustFolderVariant.qml  CustMenuProfile.qml  CustNotifyAnimation.qml  CustPageHeader.qml  CustProfileHeader.qml  CustTagButton.qml  CustTextField.qml  CustTextFieldError.qml  CustViewNote.qml  IconModelActivities.qml  IconModelEmotions.qml  IconModelMood.qml  Utils.js  qmldir
qml/components/: CustomCheckbox.qml  CustomComponents.qml  qmldir.txt
qml/pages/: AuthWindow.qml  Calendar.qml  Dashboard.qml  Home.qml  Login.qml  PinCode.qml  PrivacyGate.qml  Recovery.qml  Registration.qml  Research.qml  Settings.qml  mainContent.qml
qml/popups/: popAddEntryActivity.qml  popAddEntryEmotion.qml  popAddEntryTag.qml  popCategoryActivitiesManage.qml  popCategoryEmotionsManage.qml  popCategoryTagsManage.qml  popEntryChanger.qml  popEntryChooseFolder.qml  popEntryCreator.qml  popEntryFeedByDate.qml  popFolderChangeName.qml  popFolderDeleteAdmit.qml  popFoldersManager.qml  popIconPicker.qml  popIconPicker2.qml  popOnBoarding.qml  popPinCodeManager.qml  popTodoosManager.qml  popUserChangeEmail.qml  popUserChangePass.qml  popUserChangeProfile.qml  popUserDeleteAdmit.qml  popUserExitAdmit.qml
src/: AppSave.cpp  AppSave.h  AuthUser.cpp  AuthUser.h  CategoriesUser.cpp  CategoriesUser.h  ComputeUser.cpp  ComputeUser.h  CustomComponentsSingleton.h  EntriesUser.cpp  EntriesUser.h  EntryUser.cpp  EntryUser.h  EntryUserModel.cpp  EntryUserModel.h  FoldersUser.cpp  FoldersUser.h  TodoUser.cpp  TodoUser.h  UserItem.h  vibrationutils.cpp  vibrationutils.h
src/db/: mindtracedb.db
src/models/: UserModel.cpp  UserModel.h
src/viewmodels/: AppViewModel.h  AuthViewModel.cpp  AuthViewModel.h
